Clean up login/logout markup. Fix height so life-force doesn't jump around

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -267,6 +267,10 @@ nav a {
     opacity: 1;
   }
 
+  .login-elements {
+    min-height: 1.6em;
+  }
+
   #toggleDebug {
     display:none;
   }
